--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Découvrez le portfolio de Paul Jaguin, développeur web full stack passionné, Création de sites et applications web et mobiles avec JS, PHP, SQL et leurs frameworks, ainsi qu'en DevOps.">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Portfolio | Paul Jaguin - Développeur Web">
+    <meta property="og:title" content="Portfolio | Ashkan Ebrahimi - Network and Security Engineer">
     <meta property="og:description" content="Découvrez le portfolio de Paul Jaguin, développeur web full stack passionné, Création de sites et applications web et mobiles avec JS, PHP, SQL et leurs frameworks, ainsi qu'en DevOps.">
-    <meta property="og:site_name" content="Portfolio | Paul Jaguin - Développeur Web">
+    <meta property="og:site_name" content="Portfolio | Ashkan Ebrahimi - Network and Security Engineer">
     <meta property="og:url" content="https://pauljaguin.com">
     <meta property="og:image" content="https://pauljaguin.com/img/logo-portfolio-black.webp">
     <meta property="og:image:alt" content="Logo Portfolio Paul Jaguin">
@@ -17,7 +17,7 @@
     <meta property="og:locale:alternate" content="en_US">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Portfolio | Paul Jaguin - Développeur Web">
+    <meta name="twitter:title" content="Portfolio | Ashkan Ebrahimi - Network and Security Engineer">
     <meta name="twitter:description" content="Découvrez le portfolio de Paul Jaguin, développeur web full stack passionné, Création de sites et applications web et mobiles avec JS, PHP, SQL et leurs frameworks, ainsi qu'en DevOps.">
     <meta name="twitter:image" content="https://pauljaguin.com/img/logo-portfolio-black.webp">
     <meta name="twitter:image:alt" content="Logo Portfolio Paul Jaguin">
